# scylladb_rs

./: Cargo.toml  README.md
src/: auth.rs  keyspace.rs  lib.rs  main.rs  table.rs
src/database/: column.rs  index.rs  keyspace.rs  materialized_view.rs  schema.rs  table.rs
src/query/: delete.rs  insert.rs  operators.rs  query.rs  query_builder.rs  select.rs  update.rs  utils.rs
tests/: columns.rs  database.rs  deleting.rs  indexing.rs  inserting.rs  inserting_bulk.rs  integration.rs  keyspaces.rs  materialized_views.rs  selecting.rs  tables.rs  updating.rs
