[package]
name = "scylladb_rs"
version = "0.1.0"
edition = "2021"
authors = ["hadi-xlx & floris-xlx"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.13"
tokio = {version = "1.37.0", features = ["full"]}
serde = "1.0.203"
serde_json = "1.0.117"
uuid = "1.8.0"